# movie-note

./: CLAUDE.md  dlltool.cs  index.html  package-lock.json  package.json  setup.ps1  tsconfig.json  vite.config.ts
.claude/: settings.local.json
src/: App.tsx  index.css  main.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: code_parser.rs  db.rs  lib.rs  main.rs
src-tauri/src/commands/: actor.rs  actor_commands.rs  data.rs  export_commands.rs  file.rs  file_commands.rs  image_commands.rs  mod.rs  movie.rs  movie_commands.rs  scraper.rs  scraper_commands.rs  tag.rs  tag_commands.rs  workspace_commands.rs
src-tauri/src/db/: migrations.rs  mod.rs  workspace.rs
src-tauri/src/db/migrations/: 001_initial.sql  002_code_search_upgrade.sql  003_tag_scope.sql  004_actor_tag_to_type.sql  005_actor_names.sql  006_provider_fields.sql
src-tauri/src/models/: actor.rs  common.rs  file.rs  image.rs  mod.rs  movie.rs  tag.rs
src-tauri/src/providers/: config.rs  local.rs  mod.rs  open115.rs  webdav.rs
src-tauri/src/scraper/: javbus.rs  javdb.rs  mod.rs
src/hooks/: useImagePicker.ts  useMovieFilterNavigation.ts  useMovies.ts  usePasteImage.ts  useSearchSuggestions.ts
src/lib/: assetUrl.test.ts  assetUrl.ts  movieFilterNavigation.test.ts  movieFilterNavigation.ts  movieWatchStatus.test.ts  movieWatchStatus.tsx  utils.ts
src/pages/: ActorDetailPage.tsx  ActorListPage.tsx  CloudDrivePage.tsx  GenreManagementPage.tsx  MovieDetailPage.tsx  MovieListPage.tsx  ProviderSettingsPage.tsx  (+1 more)
test-data/: sample-import-small.json
(+57 files in other folders)
